[B]Retrospect v5.5.3 - Changelog - 2022-02-15[/B]

t.b.d.

[B]Framework related[/B]
_None_

[B]GUI/Settings/Language related[/B]
_None_

[B]Channel related[/B]
* Fixed: RTV Utrecht recent slug.
* Fixed: With the new proper Content-Types and Media-Types we don't need to force an "Info" menu entry (Fixes #1620).
* Fixed: SVT "New on SVT Play" broken (Fixes #1621).