@@ -1,0 +1,431 @@
+WEBVTT
+
+STYLE
+::cue {
+    color: #DFDFDF;
+}
+::cue(.huvudpratare) {
+    color: #00FFFF;
+}
+::cue(.ljud) {
+    color: #FF00FF;
+}
+::cue(.ljudskylt) {
+    color: #FF00FF;
+}
+::cue(.relivemark) {
+    color: #FF0000;
+}
+::cue(.sang) {
+    color: #00FF00;
+}
+
+d14ca9837e284063affa155ce4a93879
+00:00:13.080 --> 00:00:18.320 align:left position:18%
+<c.teletext>När man var liten visste man knappt
+att man kunde gå utomlands.</c>
+
+d1cf12a189da420fac8b9234a320799b
+00:00:18.480 --> 00:00:24.600 align:left position:18%
+<c.teletext>Man visste om typ Wolfsburg. Nu har
+i stort sett alla storlag ett damlag.</c>
+
+45ed37af5d3a45e782ecd8bf1a6a7e59
+00:00:24.760 --> 00:00:27.000 align:left position:18%
+<c.teletext>Det är skithäftigt.</c>
+
+f53b107e26d5408c8408896e57609423
+00:00:27.160 --> 00:00:30.800 align:left position:18%
+<c.teletext>Alla möjligheter till
+att bli bäst i världen–</c>
+
+5e22cdb102984aca8a76ea88649d8869
+00:00:30.960 --> 00:00:36.480 align:left position:18%
+<c.teletext>–och få möta spelare av världsklass:
+Samantha Kerr, Miedema...</c>
+
+8ee8f7cdf68d4de788342cf6debbed89
+00:00:36.640 --> 00:00:39.760 align:left position:18%
+<c.teletext>Den engelska ligan är väldig jämn.</c>
+
+f5c8abf083cd47888756b2e786f94de6
+00:00:39.920 --> 00:00:45.000 align:left position:18%
+<c.teletext>Jag valde Everton, för här kommer jag
+att kunna utvecklas väldigt mycket.</c>
+
+c36950948ccc4a0ba75c92168b94ccbe
+00:00:55.680 --> 00:01:00.080 align:left position:18%
+<c.teletext>Aldrig har så många svenska
+spelare i damlandslaget valt–</c>
+
+27d054fa0c0e469f82f43bbd2f3659fc
+00:01:00.240 --> 00:01:04.040 align:left position:18%
+<c.teletext>–att lämna Sverige för
+en klubbadress utomlands.</c>
+
+e4850c0fc7c540c6889f714bf661bae2
+00:01:04.200 --> 00:01:09.120 align:left position:18%
+<c.teletext>I Europa har storlag efter storlag
+valt att satsa på damsidan–</c>
+
+239578ef043b42f18cb788e92bdaaeee
+00:01:09.280 --> 00:01:14.040 align:left position:18%
+<c.teletext>–nåt som höjt standarden på ligorna
+och skapat nya förebilder.</c>
+
+92cbe2e92b2b481594ebe2760d6cdbb2
+00:01:14.200 --> 00:01:20.480 align:left position:18%
+<c.teletext>För spelarna i Sverige finns möjlig-
+heter till utlandsproffskontakt–</c>
+
+797440d5365e43bd8a2fdba20c5881b9
+00:01:20.640 --> 00:01:25.680 align:left position:18%
+<c.teletext>–tidigare damfotbollsgenerationer
+bara har kunnat drömma om.</c>
+
+b1ac8f114f35431eb10893c9792ef207
+00:01:25.840 --> 00:01:29.800 align:left position:18%
+<c.teletext>I Sveriges OS-trupp i London 2012–</c>
+
+2793e288d3a447219c76b80119ddc035
+00:01:29.960 --> 00:01:33.720 align:left position:18%
+<c.teletext>–spelade alla utom fyra
+i damallsvenskan.</c>
+
+f6c162cbf914485dad6531a686bf3ced
+00:01:33.880 --> 00:01:37.080 align:left position:18%
+<c.teletext>Idag är de siffrorna helt omvända.</c>
+
+a1d534f4cecd4cea8c9bd028a6082ca4
+00:01:37.240 --> 00:01:42.160 align:left position:18%
+<c.teletext>Om vi tar OS-truppen från Tokyo
+i somras och räknar in övergångarna–</c>
+
+5cbbf8a94d4b4b46937269bbea546b83
+00:01:42.320 --> 00:01:46.720 align:left position:18%
+<c.teletext>–spelar bara fyra i damallsvenskan
+säsongen 2022.</c>
+
+38b1771f7bb6428b93d3f2b4b6d355e0
+00:01:46.880 --> 00:01:49.840 align:left position:18%
+<c.teletext>Resten är proffs utomlands.</c>
+
+f4899c8659434dc38ccc9b5f235eaa5f
+00:01:50.000 --> 00:01:55.240 align:left position:18%
+<c.teletext>En liga lockar mer än de andra:
+Women's Super League i England.</c>
+
+400abb94aca34ef28765b8be104ee60b
+00:02:13.240 --> 00:02:19.600 align:left position:18%
+<c.teletext>Jag började känna för två år sen, när
+jag hade spelat i allsvenskan länge–</c>
+
+7596f5f135d44ddf974f9160724cf174
+00:02:19.760 --> 00:02:22.760 align:left position:18%
+<c.teletext>–att jag ville testa på nåt nytt.</c>
+
+6d6227ea7f5948cb8d3c6074c1544f2e
+00:02:22.920 --> 00:02:27.880 align:left position:18%
+<c.teletext>Jag spelade i Rosengård, vilket var
+och är topplag i damallsvenskan.</c>
+
+067630109ee344559852ed3b8f232ef7
+00:02:28.040 --> 00:02:32.080 align:left position:18%
+<c.teletext>Jag var väl förberedd
+och de hade gett mig alla nycklar.</c>
+
+5cb8ab6d0c9e427c8848a140c7e867e5
+00:02:32.240 --> 00:02:34.920 align:left position:18%
+<c.teletext>När möjligheten kom tog jag den.</c>
+
+321265236bdf4e638cd2dd2af06bec1d
+00:02:35.080 --> 00:02:39.120 align:left position:18%
+<c.teletext>Blåsig träningsdag i februari
+på Finch Farm–</c>
+
+01819b907d3041da8ae69acfd48fbbc5
+00:02:39.280 --> 00:02:43.280 align:left position:18%
+<c.teletext>–Evertons träningsanläggning,
+två mil utanför Liverpool.</c>
+
+b2a29c27297c4dc78e531204260ad710
+00:02:43.440 --> 00:02:49.480 align:left position:18%
+<c.teletext>Här spelar en svensk landslagstrio
+som lämnade Rosengård i somras.</c>
+
+dcf429d406c74e77a74643873f446d41
+00:02:49.640 --> 00:02:53.600 align:left position:18%
+<c.teletext>Anfalleran Anna Anvegård,
+försvarare Nathalie Björn–</c>
+
+156573edeab94e688b3bfea25c769a96
+00:02:53.760 --> 00:02:59.480 align:left position:18%
+<c.teletext>–och missfältstalangen Hanna Bennison
+blev tre av Evertons nio värvningar–</c>
+
+bb2eb1159cbe43768fb70587b7c59609
+00:02:59.640 --> 00:03:02.400 align:left position:18%
+<c.teletext>–i sommarfönstret i fjol.</c>
+
+d942bbec1ac6422ebd1ad3db7c48b467
+00:03:02.560 --> 00:03:07.680 align:left position:18%
+<c.teletext>Alla är på sitt första utlandsäventyr
+och tycker att standarden är högre–</c>
+
+2d3c188d6dd04e828d6e92e255a2a063
+00:03:07.840 --> 00:03:13.160 align:left position:18%
+<c.teletext>–än vad de varit vana vid i Sverige,
+både på och utanför planen.</c>
+
+a31a3d3546624f458f02ad768789e78d
+00:03:13.320 --> 00:03:18.360 align:left position:18%
+<c.teletext>Kvaliteten i fotbollen. Man vill
+alltid spela bra och tuffa matcher.</c>
+
+051156a331f248eb8a872e6775c6ad5b
+00:03:18.520 --> 00:03:22.720 align:left position:18%
+<c.teletext>Då utvecklas man som mest.
+Men sen också allt runtomkring...</c>
+
+7a8edd869e7947f5bd3c878ec37e321b
+00:03:22.880 --> 00:03:29.200 align:left position:18%
+<c.teletext>Förutsättningarna med gym,
+fystränare och allt sånt där extra.</c>
+
+4449a62b590d44799d6de7102e468f99
+00:03:29.360 --> 00:03:34.880 align:left position:18%
+<c.teletext>Vi har ju många fler ledare
+och specialister inom olika områden.</c>
+
+ff662662fc0e473488467be0c0791ddf
+00:03:35.040 --> 00:03:40.160 align:left position:18%
+<c.teletext>En enkel sak som frukost och lunch
+får vi alltid på plats varje dag.</c>
+
+df6b15d14f3848028e76516fd1bd75ae
+00:03:40.320 --> 00:03:43.760 align:left position:18%
+<c.teletext>Så ja, det är ganska stor skillnad.</c>
+
+de73567324e34e5f82652957740cd3b9
+00:03:43.920 --> 00:03:49.280 align:left position:18%
+<c.teletext>Danernas högstaliga England,
+Women's Super League, grundades 2011.</c>
+
+ed8bb6657b514c4485201c2a78a4df2f
+00:03:49.440 --> 00:03:54.880 align:left position:18%
+<c.teletext>Men det är på senare år som ligan
+blivit attraktiv även utomlands.</c>
+
+d4cf76d217f9485a934664fdab7818c2
+00:03:55.040 --> 00:03:58.120 align:left position:18%
+<c.teletext>Här finns några av
+världens bästa damspelare–</c>
+
+29aef20de654478a868b509284a8ef27
+00:03:58.280 --> 00:04:01.360 align:left position:18%
+<c.teletext>–som nederländskan Vivianne Miedema
+i Arsenal–</c>
+
+6428ce50b6bf4be3860b5da892fe21a5
+00:04:01.520 --> 00:04:05.080 align:left position:18%
+<c.teletext>–och australiensiskan Sam Kerr
+i Chelsea.</c>
+
+2ebae492fad541fab99b0a8878c95aca
+00:04:05.240 --> 00:04:09.560 align:left position:18%
+<c.teletext>Ett Chelsea, som liksom Everton,
+har tre svenskor i laget–</c>
+
+dc3bc0cc8dd6471ea82baf03c023ff6f
+00:04:09.720 --> 00:04:13.920 align:left position:18%
+<c.teletext>–där en av dem, Magdalena Eriksson,
+bär kaptensbindeln.</c>
+
+1f81fc0ac46e4abf82c61bd2238d5b23
+00:04:14.080 --> 00:04:17.760 align:left position:18%
+<c.teletext>Totalt finns tio svenskor
+i Women's Super League–</c>
+
+fb140b261ac547c88e8d0943f8d9dd7a
+00:04:17.920 --> 00:04:20.200 align:left position:18%
+<c.teletext>–utspridda på fem olika klubbar.</c>
+
+91d243b87b4446f88adc047c6bef41fd
+00:04:29.160 --> 00:04:33.320 align:left position:18%
+<c.teletext>I Manchester träffar vi
+fotbollsjournalisten Tom Garry.</c>
+
+8e751da9bd85476586f571e5d87c6d75
+00:04:33.480 --> 00:04:37.640 align:left position:18%
+<c.teletext>Han har bevakat Women's Super League
+för tidningen The Telegraph–</c>
+
+8ae68d448aa244909a72a69c2207e1d3
+00:04:37.800 --> 00:04:40.640 align:left position:18%
+<c.teletext>–och på nära håll följt utvecklingen.</c>
+
+9c20dabcc8b94415839752e0c9209f7f
+00:05:06.480 --> 00:05:09.960 align:left position:18%
+<c.teletext>Även ekonomiskt
+har ligan tagit stora steg.</c>
+
+074376a0010c48d28202fa8af06a788c
+00:05:10.120 --> 00:05:15.480 align:left position:18%
+<c.teletext>Sky Sports och BBC har denna säsong
+köpt tv-rättigheter till matcherna.</c>
+
+3ada7a311d3b4d76b3cf7f167478b26d
+00:05:15.640 --> 00:05:20.360 align:left position:18%
+<c.teletext>I England ingår damlagen i samma
+klubbar som de stora herrlagen–</c>
+
+e696f0ec59df42808c2c119dd74a964e
+00:05:20.520 --> 00:05:26.640 align:left position:18%
+<c.teletext>–vilket innebär att flera av ägarna
+nu satsar mer även på damfotbollen.</c>
+
+0d31cd95cf3e43f687beba47b4d48605
+00:05:49.040 --> 00:05:53.600 align:left position:18%
+<c.teletext>/"ALL YOU NEED IS LOVE"
+– THE BEATLES/</c>
+
+b41d15526a754f458126bcc2b298ff2b
+00:06:50.000 --> 00:06:56.360 align:left position:18%
+<c.teletext>Trots damfotbollens snabba framfart
+i England finns slående skillnader.</c>
+
+48a819fd96bb4d3c85d8694bd38af1cf
+00:06:56.520 --> 00:07:01.360 align:left position:18%
+<c.teletext>Evertons herr-arena Goodison Park
+tar runt 40 000 på läktaren.</c>
+
+2832c58aa0214e5589e25912f4c8a28b
+00:07:01.520 --> 00:07:06.520 align:left position:18%
+<c.teletext>Damernas arena Walton Hall Park
+har en publikkapacitet på 2 000.</c>
+
+58d9c76e2c8748a59c91de2ab47b7c00
+00:07:10.520 --> 00:07:15.480 align:left position:18%
+<c.teletext>Den här söndagseftermiddagen väntas
+hemmamatch mot Aston Villa i ligan.</c>
+
+ef20e909794247d48685764aef7fa461
+00:07:15.640 --> 00:07:18.680 align:left position:18%
+<c.teletext>Här finns en läktare längs långsidan–</c>
+
+b4224266503943948c8d37a16652972a
+00:07:18.840 --> 00:07:23.280 align:left position:18%
+<c.teletext>–och publiken får se Everton
+förlora matchen med 0–2.</c>
+
+cbda10fb0f444709b1c0e7658bf3379d
+00:07:23.440 --> 00:07:27.880 align:left position:18%
+<c.teletext>Det senaste halvåret har varit
+turbulent för damspelarna.</c>
+
+a7876b9dfdc1429b8a0898edf5cc306e
+00:07:28.040 --> 00:07:33.440 align:left position:18%
+<c.teletext>På fyra månader sparkades två tränare
+– den första efter bara fem omgångar–</c>
+
+1440fee80b584b0ebbd15936759e54e7
+00:07:33.600 --> 00:07:39.200 align:left position:18%
+<c.teletext>–då säsongen, trots offensiva
+värvningar, inte gick som förväntat.</c>
+
+7940cd4730d4429db3a24ad821711adc
+00:07:39.360 --> 00:07:45.800 align:left position:18%
+<c.teletext>Men det får inte den svenska trion
+att ångra flytten från allsvenskan.</c>
+
+af474a9a70cc47adbe44b0e7886e4e9d
+00:07:46.920 --> 00:07:52.240 align:left position:18%
+<c.teletext>Det är konstigt att säga med tanke
+på resultaten, men jag trivs bra.</c>
+
+97fb92e03d7b4e6a871659b1167b6242
+00:07:52.400 --> 00:07:58.200 align:left position:18%
+<c.teletext>Jag känner ändå att jag tagit kliv
+i min utveckling, speciellt fysiskt–</c>
+
+ee3b4a47b8fb423e89bfa0c3e3d1ceb1
+00:07:58.360 --> 00:08:04.400 align:left position:18%
+<c.teletext>–där jag känt att jag behövt ta steg,
+så jag tror att det är väldigt bra.</c>
+
+12b84b142dfc483c911d3a165368a6ec
+00:08:04.560 --> 00:08:09.520 align:left position:18%
+<c.teletext>Med den träning och speltid jag
+får känner jag att jag utvecklas.</c>
+
+92e9395bad8947f1855e62c04023fa12
+00:08:09.680 --> 00:08:14.680 align:left position:18%
+<c.teletext>Jag tror det hjälper, för då tänker
+man inte på det andra lika mycket.</c>
+
+e0a96cf322e1463082c2c515d4896e1e
+00:08:14.840 --> 00:08:19.120 align:left position:18%
+<c.teletext>Jag har inte ångrat
+att jag gick till Everton.</c>
+
+a501ee959da447c585c1189c9d9de749
+00:08:19.280 --> 00:08:25.120 align:left position:18%
+<c.teletext>Finns det risk att denna utveckling
+får svensk fotboll att hamna efter?</c>
+
+baa42e95f190446c8bf73e5eb05d1e74
+00:08:25.280 --> 00:08:32.240 align:left position:18%
+<c.teletext>Jo, det tror jag skulle kunna hända.
+Man känner det redan lite nu.</c>
+
+93f0261a37c946f0802f0921831b5189
+00:08:32.400 --> 00:08:36.560 align:left position:18%
+<c.teletext>Det sticker iväg utomlands
+och Sverige hamnar efter.</c>
+
+0e43d9acb2824800818a527e15a33eaf
+00:08:36.720 --> 00:08:40.440 align:left position:18%
+<c.teletext>Sverige är inte så lockande längre,
+så få går dit.</c>
+
+d3cf4018ae5448eeaef6c7b0fc7edcfc
+00:08:40.600 --> 00:08:44.000 align:left position:18%
+<c.teletext>Många duktiga svenskor går utomlands.</c>
+
+24a0535d8a294041be22f14194566986
+00:08:44.160 --> 00:08:49.240 align:left position:18%
+<c.teletext>Det blir nog tuffare för Sverige
+att hänga med i den utvecklingen.</c>
+
+9cfcc361cb4b4c6b8fd51c822cf8128f
+00:08:49.400 --> 00:08:53.480 align:left position:18%
+<c.teletext>Vad tänker du om det?
+Du är en del av det.</c>
+
+050fe7d09b7b42a889ab2a2623285e1f
+00:08:53.640 --> 00:09:00.040 align:left position:18%
+<c.teletext>Det är tråkigt. Vi har ju ett bra
+landslag, men många spelar utomlands–</c>
+
+427d10cec004456da700fb0c5c714606
+00:09:00.200 --> 00:09:03.560 align:left position:18%
+<c.teletext>–då kvaliteten är bättre där just nu.</c>
+
+90e04fddd07245a3a87532a993a60d2d
+00:09:03.720 --> 00:09:08.800 align:left position:18%
+<c.teletext>Om Sverige vill hänga med måste
+flera stora herrklubbar börja satsa–</c>
+
+1650427522564a9d85cbb26684db7cfb
+00:09:08.960 --> 00:09:12.000 align:left position:18%
+<c.teletext>–som Häcken och Hammarby.</c>
+
+3f3ef794669b492f87cf802fa2d772d4
+00:09:12.160 --> 00:09:15.400 align:left position:18%
+<c.teletext>Då kan Sverige ha en chans, absolut.</c>
+
+4c3c833fe1d54dcb8e0f99ce5013e323
+00:09:28.160 --> 00:09:31.920 align:center position:50%
+<c.teletext.skylt>Textning: Terese Olofsson
+(c) Sveriges Television AB 2022</c>
+
